--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
     </script>
     <script type="text/x-handlebars" data-template-name="inventory">
       <h1>Current Inventory</h1>
-      <h4>You have {{carsCount}} {{test}} vehicles in inventory</h4>
+      <h4>You have {{carsCount}} vehicles in inventory</h4>
       <h5>Add new vehicle to inventory</h5>
       <table>
         <tr>
-          <th>Key#:{{nextKeyNumber}}</th><th>Stock#:</th><th>VIN:</th><th>Year:</th><th>Make:</th><th>Model:</th><th>Exterior Color:</th>
+          <th>Key#:</th><th>Stock#:</th><th>VIN:</th><th>Year:</th><th>Make:</th><th>Model:</th><th>Exterior Color:</th>
         </tr>
         <tr class='add_car'>
           <td>{{input valueBinding='keyNumber' id='key_in'}}</td>
